[project]
name = "audio-steganography-algorithms"
version = "0.1.0"
description = ""
authors = [
    {name = "almarazj",email = "juan.almaraz097@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "soundfile (>=0.13.1,<0.14.0)",
    "librosa (>=0.11.0,<0.12.0)",
    "pydub (>=0.25.1,<0.26.0)",
    "flake8 (>=7.2.0,<8.0.0)",
    "setuptools (>=78.1.0,<79.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
